crystalized ideas and wrote to-do things

--- a/frontend/html/main.html
+++ b/frontend/html/main.html
@@ -19,7 +19,22 @@
                         <a class="nav-link active" href="#differences">Różnice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Zdjęcia</a>
+                        <a class="nav-link active" href="#pictures">Zdjęcia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#diet">Dieta</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#hard-to-use">Trudny zwierz?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#brave">Odwaga</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#form">Formularz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#footer">Stopka</a>
                     </li>
                 </ul>
             </div>
@@ -41,12 +56,42 @@
                 <div class="col-6">
                     <img src="https://rikoland.pl/data/include/img/news/1621343212.jpg" class="img-fluid img-cute-border" width="" height="">
                 </div>
-                <div class="col-6">
+                <div class="col-6 d-flex align-items-center">
                     <article>
+                        <h3>Królik</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur commodi debitis dicta esse expedita, explicabo laudantium minus officia perspiciatis placeat soluta suscipit vitae voluptatem.
                         </p>
                     </article>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 d-flex align-items-center">
+                    <article>
+                        <h3>Zając</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur commodi debitis dicta esse expedita, explicabo laudantium minus officia perspiciatis placeat soluta suscipit vitae voluptatem.
+                        </p>
+                    </article>
+                </div>
+                <div class="col-6">
+                    <img src="https://houseofpostcards.pl/userdata/public/gfx/55740/Zajac.jpg" class="img-fluid img-cute-border" width="" height="">
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="pictures">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2>Przykłady słodziaków:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    //karuzela z boopstrapa
                 </div>
             </div>
         </div>
@@ -56,7 +101,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2>Ciekawostki o Królisiach</h2>
+                    <h2>Sekcja o diecie</h2>
                 </div>
             </div>
             <div class="row">
@@ -66,7 +111,49 @@
         </div>
     </section>
 
-    <footer>
+    <section id="hard-to-use">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2>Jak trudne są zajęczaki?</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="brave">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2>Przykłady odwagi .>video<.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="form">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2>magiczny formularz</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer">
         <div class="container-fluid">
             <div class="row pt-2">
                 <div class="col-12 d-flex justify-content-center">
@@ -75,7 +162,7 @@
                     </button>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt-4">
                 <div class="col-12 text-center">
                     &copy;
                     <span id="footer-text">
